--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h1>GeeksforGeeks</h1>
+        <h1>NXTWAVE</h1>
         <form id="my-form">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
